start working on deployment

--- a/udagram-frontend/src/app/feed/feed-list/feed-list.component.scss
+++ b/udagram-frontend/src/app/feed/feed-list/feed-list.component.scss
@@ -3,5 +3,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: var(--ion-color-light-tint);
+    background: blanchedalmond;
+    margin: 10rem 0;
   }
